2000-11-07  Lars Wirzenius  <liw@iki.fi>

	* gwlib/http.c: Massive rearranging and some renaming, but no real
	changes. The code is now much cleaner and easier to understand.

2000-11-07  Tuomas Luttinen  <tuo@wapit.com>

	* gwlib/octstr.c: Added some protection against endless loops in 
	strip-functions for special cases.

	* gw/wml_compiler.c: Memory leak with malformed variable fixed. 
	Also fixed the bug that reserved words cannot be variable names,
	eg $(password).

2000-11-07  Lars Wirzenius  <liw@iki.fi>

	* gwlib/http.[ch]: Removed old server API.

2000-11-07  Lars Wirzenius  <liw@iki.fi>

	* test/drive_wapbox.c: Converted to use new HTTP server API.

2000-11-07  Richard Braakman  <dark@wapit.com>

	* gwlib/http.c: Fix memory leak in client_read_body.
	Make server_thread not warn if gwthread_poll fails with EINTR.

	* gwlib/conn.[ch]: Added conn_read_error(), and a read_error
	field to the Connection structure.
	Added conn_read_everything().

	* gwlib/http.c: In client_read_body, use conn_read_everything
	instead of conn_inbuf_length and conn_read_fixed.  This way
	it will detect end-of-file.

	* gw/wapbox.c: Make send_heartbeat_thread() not send more
	heartbeats than twice the usual frequency.  (We can live with
	sleep() not being exact, but when the wapbox is run inside a
	debugger it tends to go wild.)

2000-11-07  Lars Wirzenius  <liw@iki.fi>

	* checks/check_sendsms.sh: Sleep for five seconds before starting
	smsbox; this prevents the smsbox from crashing before the
	bearerbox is ready to accept its connection.
	
	* gw/smsbox.c: Adapted to new HTTP server API.
	
	* gwlib/http.c: Bugfix. If we fail to re-use a connection, and
	re-open it, we must then quit the handler for the old connection.

2000-11-07  Lars Wirzenius  <liw@iki.fi>

	* checks/check_sendsms.sh: Wrote.

2000-11-07  Lars Wirzenius  <liw@iki.fi>

	* checks/check_fakesmsc.sh: Wrote.

2000-11-06  Tuomas Luttinen  <tuo@wapit.com>
